# xjtu-compiler-experiment

./: .gitignore  CMakeLists.txt  README.md  file tree.txt
basic/: CMakeLists.txt  code.cpp  code.hpp  grammar.cpp  grammar.hpp  item.cpp  item.hpp  lexical.cpp  lexical.hpp  slr_table.cpp  slr_table.hpp  st_analyzer.cpp  st_analyzer.hpp  symbol_table_analyzer.cpp  symbol_table_analyzer.hpp  syntax.cpp  syntax.hpp
gui/: CMakeLists.txt  compiler_signal.cpp  compiler_signal.hpp  compiler_window.cpp  compiler_window.hpp  resources.qrc
gui/resource/: lexical.json
input/code_regex/: mips.json
input/grammar/: C语言文法.txt  grammar_02.txt  grammar_extend.txt  grammar_normal.txt
input/lexical/: lexical_01.json  lexical_02.json  lexical_extend.json  lexical_normal.json
input/program/: program_01.txt  program_02.txt  program_03.txt
input/slr_table/: slr_table_extend.csv  slr_table_normal.csv
output/code/: mips_code.txt  three_addr_code.txt
output/grammar/: grammar_01.txt
output/item_cluster/: item_cluster.txt  item_cluster_01.dot  item_cluster_01.json  item_cluster_01.txt
output/lexical/: lexical.txt  lexical_01.txt  lexical_02.txt
output/slr_table/: conflict_after.csv  conflict_before.csv  id_to_grammar.txt  slr_table_02.csv  slr_table_extend_before.csv  slr_table_normal_before.csv
output/symbol_table/: processes.txt  processes_01.txt  symbol_table.txt  symbol_table_01.txt
test/fun_sym_tab/: test_symbol_table_01.cpp
test/grammar/: CMakeLists.txt  test_grammar_01.cpp
test/item_cluster/: CMakeLists.txt
test/lexical/: CMakeLists.txt  test_lexical_01.cpp
test/slr_table/: test_slr_table_01.cpp
test/symbol_table/: CMakeLists.txt  test_symbol_table_01.cpp
utils/: CMakeLists.txt  csv.hpp  format.hpp  strtool.hpp
